syntax = "proto3";

option csharp_namespace = "ConsoleGrpcServiceTutorial";

package greet;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc CallServiceGrpc (CallServiceGrpcoRequest) returns (CallServiceGrpcReply);
}

// The request message containing the user's name.
message CallServiceGrpcoRequest {
  string name = 1;
  string message = 2;
}

// The response message containing the greetings.
message CallServiceGrpcReply {
  string message = 1;
}
